--- a/app/components/graph/graph.component.html
+++ b/app/components/graph/graph.component.html
@@ -30,18 +30,18 @@
         </AbsoluteLayout>
 
         <AbsoluteLayout #dragAge height="450" left="78" top="50">
-            <AbsoluteLayout orientation="horizontal" class="cirkel" top="207" (pan)="onPanAge($event)">
-                <Label class="fa" [text]="'fa-chevron-left' | fonticon" top="12" left="5" (tap)="onTapAge($event)"></Label>
-                <Label class="fa" [text]="'fa-chevron-right' | fonticon" top="12" left="21" (tap)="onTapAge($event)"></Label>
+            <AbsoluteLayout orientation="horizontal" class="cirkel" top="207">
+                <Label class="fa" [text]="'fa-chevron-left' | fonticon" top="12" left="5" ></Label>
+                <Label class="fa" [text]="'fa-chevron-right' | fonticon" top="12" left="21"></Label>
             </AbsoluteLayout>
             <StackLayout width="1" class="ruler" top="0" left="22" height="100%"></StackLayout>
         </AbsoluteLayout>
 
         <AbsoluteLayout #dragTarget top="128" left="100" width="750">
             <StackLayout width="100%" class="ruler" top="22" left="0" height="1"></StackLayout>
-            <AbsoluteLayout orientation="vertical" class="cirkel" top="0" left="75" (pan)="onPanTarget($event)">
-                <Label class="fa" [text]="'fa-chevron-up' | fonticon" left="11" top="2" (tap)="onTapAge($event)"></Label>
-                <Label class="fa" [text]="'fa-chevron-down' | fonticon" left="11" top="17" (tap)="onTapAge($event)"></Label>
+            <AbsoluteLayout orientation="vertical" class="cirkel" top="0" left="75" >
+                <Label class="fa" [text]="'fa-chevron-up' | fonticon" left="11" top="2" ></Label>
+                <Label class="fa" [text]="'fa-chevron-down' | fonticon" left="11" top="17"></Label>
             </AbsoluteLayout>
         </AbsoluteLayout>
 
